# mime-type

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  publish.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: application.rs  archive.rs  audio.rs  book.rs  document.rs  font.rs  image.rs  lib.rs  mime_format.rs  video.rs
