[package]
name = "mime-type"
version = "0.1.0"
edition = "2024"
description = "A Rust library for handling MIME types."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/mime-type"
repository = "https://github.com/secana/mime-type"
keywords = ["mime", "webdev", "file", "format"]
categories = ["web-programming", "encoding", "data-formats", "parsing"]
[dependencies]
